--- a/style.css
+++ b/style.css
@@ -63,6 +63,7 @@ body::-webkit-scrollbar {
   display: none; /* for Chrome, Safari, and Opera */
 } 
 body{
+height: 100vh;
 height: 100%; 
 background-color: var(--background);
 display: flex;
@@ -114,19 +115,19 @@ margin-bottom: 20px;
 transition: all 0.2s linear 0.5s;
 box-shadow: var(--shadow);
 }
-/* .tile:hover{
+.tile:hover{
 cursor: pointer;
-margin-bottom: 80px;
-transition: all 0.2s linear 0.5s;
-} */
+
+transition: all 0.2s linear;
+}
 .tile.active .tileControlsWraper{
 top:130px;
-transition: all 0.2s linear 0.5s;
+transition: all 0.2s linear;
 z-index: 1;
 
 } 
 .tileControlsWraper{
-transition: all 0.2s linear 0.5s;
+transition: all 0.2s linear;
 z-index: -5;
 position: absolute;
 top: 70px;
@@ -610,7 +611,8 @@ left:0;
 right:0;
 margin: auto;
 background-color: var(--dashboard);
-width: 350px;
+width: 100vh;
+width: 100%;
 height: 144px;
 padding: 20px;
 border-radius:0 0 20px 20px;
