--- a/style.css
+++ b/style.css
@@ -7,8 +7,8 @@
 
 
   /* COLORS */
-  /* --background: #1c2130; */
-  --background: #444444;
+  --background: #1c2130;
+  /* --background: #444444; */
   --tile: #4eb19f;
   --dashboard: #eadebd;
   --dashboardNameText: #8c8571;
