--- a/style.css
+++ b/style.css
@@ -272,6 +272,7 @@ border-radius: 20px;
 grid-template-rows: 30px 50px 30px 50px 30px 50px 30px 50px 30px 50px;
 grid-template-columns: 80% 20%; 
 margin-bottom: 20px;
+transform:scaleY(2);
 }
 .dashboard{
 cursor: pointer;
@@ -280,7 +281,7 @@ grid-column: 1;
 background-color: var(--dashboard);
 /* width: 260px; */
 width: 300px;
-/* height: 215px; */
+height: 215px;
 padding: 20px;
 border-radius: 20px;
 /* GRID */
