--- a/style.css
+++ b/style.css
@@ -274,7 +274,23 @@ grid-template-columns: 80% 20%;
 margin-bottom: 20px;
 transform:scaleY(2);
 }
+.dashboardExpander{
+margin-bottom: 20px;
+width: 300px;
+height: 215px;
+background-color: #cc4848;
+position: absolute;
+left: 0px;
+transition: all 0.2s linear;
+border-radius: 20px;
+z-index: -1;
+}
+.dashboardExpander.active{
+transform: translateY(150px);
+transition: all 0.2s linear;
+}
 .dashboard{
+position: relative;
 cursor: pointer;
 transition-duration: 200ms;
 grid-column: 1;
@@ -844,12 +860,12 @@ color:-var(--greyBtn) ;
   transition: all 0.2s linear 0.5s;
   }
 
-  .tile:hover .tileControlsWraper{
+  /* .tile:hover .tileControlsWraper{
   top:110px;
   transition: all 0.2s linear 0.5s;
   z-index: 1;
 
-  } 
+  }  */
   .tileControlsWraper{
   transition: all 0.2s linear 0.5s;
   z-index: -5;
