--- a/style.css
+++ b/style.css
@@ -551,7 +551,6 @@ z-index: 10;
 position: fixed;
 bottom:0px;
 background-color: var(--dashboard);
-color: beige;
 width: 100%;
 width: 100vw;
 height: 270px;
@@ -560,9 +559,12 @@ padding-top: 30px;
 border-radius: 20px 20px 0 0;
 /* GRID */
 display: grid;
-grid-template-rows: 40px 25px 50px 25px 70px ;
+grid-template-rows: 40px 25px 55px 25px 70px ;
+/* grid-template-columns: auto 60px; */
 }
 .inputName{
+caret-color: var(--dashboard);
+color: var(--dashboard);
 justify-self: center;
 font-weight: 500;
 width: 310px;
@@ -571,19 +573,48 @@ border: none;
 outline: none;
 padding-left: 10px;
 font-size: 20px;
+background-color: var(--dashboardNameText);
+/* grid-column-start: 1;
+grid-column-end: 3; */
+}
+.inputName::placeholder{
+color: var(--dashboard);
+}
+.inputAmnt::placeholder{
+color: var(--dashboard);
 }
 .inputAmnt{
 justify-self: center;
-font-size: 25px;
-font-weight: 500;
+background-color: var(--dashboardNameText);
+color: var(--dashboard);
+text-align: end;
+padding-right: 55px;
+font-size: 3em;
+/* font-weight: 500; */
 width: 310px;
-
 padding-left: 10px;
-grid-row: 3;
 border-radius: 10px;
 border: none;
 outline: none;
 }
+.amountWraper{
+grid-row: 3;
+justify-self: center;
+width: 310px;
+display: flex;
+position: relative;
+
+}
+.inputsPLN{
+font-size: 1.5em;
+font-weight: 500;
+color: var(--dashboard);
+position: absolute;
+right: 10px;
+bottom: 10px;
+
+}
+
 .categories{
 justify-self: center;
 width: 310px;
@@ -600,7 +631,7 @@ transform: scale(1);
 }
 .expenseCat{
 box-shadow: var(--shadowLight);
-background-color:  rgb(255, 94, 0);
+background-color: var(--tile);
 font-size: 17px;
 color:  beige;
 width: 145px;
@@ -744,45 +775,43 @@ border-radius:0 0 20px 20px;
 display: grid;
 /* grid-template-columns: auto 80px; */
 grid-template-rows: 20px 20px 50px;
+columns: 80% 20%;
 box-shadow: var(--shadow);
 
 }
 .setInput{
-caret-color: var(--expensesTileName);
-color: var(--expensesTileName);
-font-size: 25px;
-font-weight: 500;
+caret-color: var(--tile);
+color: var(--tile);
+font-size: 3em;
+/* font-weight: 400; */
 width: 260px;
 padding-left: 10px;
 grid-row: 3;
 border-radius: 10px;
-border: solid;
-border-width: 3px;
-border-color: var(--expensesTileName);
+border: none;
 outline: none;
-background-color: var(--tile);
+background-color: var(--expensesTileName);
 display: flex;
 text-align: end;
 padding-right: 8px;
 padding-left: 8px;
 }
 .setInput::placeholder{
-color: var(--expensesTileName);
+color: var(--tile);
 }
 
 .setButtons{
+grid-column: 3;
+grid-row-start: 2;
+grid-row-end:3;
 	color: black;
 	border-radius: 15px;
-	margin-right: -50px;
-	z-index: 5;
 	/* grid-column: 2; */
-	grid-row: 4;
-	justify-self: end;
 	display: flex;
+  flex-direction: column;
 	justify-content: space-around;
 	align-items: center;
-	margin-top: 35px;
-	
+
 } 
 .SetConfirmBtn:active{
 	transform: scale(1);
@@ -831,14 +860,15 @@ color: rgb(97, 0, 97);
 grid-row: 1;
 }
 .setPLN{
-grid-column: 4;
+margin-left: 5px;
+grid-column: 2;
 grid-row: 3;
 align-self: end;
 position: relative;
 bottom: 12px;
 font-size: 1.5em;
 font-weight: 500;
-color:-var(--greyBtn) ;
+color: var(--expensesTileAmount);
 }
 @media screen and (min-width: 670px){
 
