--- a/style.css
+++ b/style.css
@@ -64,6 +64,7 @@ body::-webkit-scrollbar {
   display: none; /* for Chrome, Safari, and Opera */
 } 
 body{
+user-select: none;
 height: 100vh;
 height: 100%; 
 background-color: var(--background);
@@ -454,12 +455,12 @@ color: var(--plnText);
 .expenses{
 font-size: 1.5em;
 font-weight: 500;
-color: var(--dashboardNameText);
+color: var(--debtsTileAmount);
 grid-column: 1;
 grid-row: 2;
 }
 .expensesAmnt{
-color: var(--dashboardAmountText);
+color: var(--debtsTileAmount);
 display: flex;
 justify-content: end;
 font-size: 3em;
@@ -474,7 +475,7 @@ position: relative;
 bottom: 10px;
 font-size: 1.5em;
 font-weight: 500;
-color: var(--plnText);
+color: var(--debtsTileAmount);
 }
 .debtsPLN{
 grid-column: 2;
@@ -484,19 +485,19 @@ position: relative;
 bottom: 10px;
 font-size: 1.5em;
 font-weight: 500;
-color: var(--plnText);
+color: var(--debtsTileAmount);
 }
 .debts{
 font-size: 1.5em;
 font-weight: 500;
-color: var(--dashboardNameText);
+color: var(--debtsTileAmount);
 grid-column: 1;
 grid-row: 4;
 }
 .debtsAmnt{
 display: flex;
 justify-content: end;
-color: var(--dashboardAmountText);
+color: var(--debtsTileAmount);
 font-size: 3em;
 grid-column: 1;
 grid-row: 5;
