--- a/style.css
+++ b/style.css
@@ -1045,6 +1045,12 @@ width: 150px;
 height: auto;
 }
 }
-  
+body{
 
-}
+  -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
+  -webkit-user-select: none; /* Safari */
+  -ms-user-select: none; /* IE 10 and IE 11 */
+  user-select: none; /* Standard syntax */
+
+} 
+
