--- a/style.css
+++ b/style.css
@@ -74,10 +74,13 @@ align-items: center;
 margin-top: 100px;
 }
 
-
+.topBar.hidden{
+opacity: 10%;
+transition-duration: 0.5s;
+}
 .wraper.hidden{
 z-index: 1;
-opacity: 50%;
+opacity: 10%;
 transition-duration: 0.5s;
 
 
@@ -590,8 +593,8 @@ z-index: 6;
 width: 100%;
 width: 100vw;
 height: 500px;
-background-color: #db6969;
-opacity: 30%;
+/* background-color: #db6969;
+opacity: 30%; */
 top:140px
 }
 .inputName{
